tests/baselines/reference/asyncFunctionDeclarationCapturesArguments_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncFunctionDeclarationCapturesArguments_es5.ts(5,36): error TS2522: The 'arguments' object cannot be referenced in an async function or method in ES5. Consider using a standard function or method.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncFunctionDeclarationCapturesArguments_es5.ts (1 errors) ====
    class C {
       method() {
          function other() {}
          async function fn () {
               await other.apply(this, arguments);
                                       ~~~~~~~~~
!!! error TS2522: The 'arguments' object cannot be referenced in an async function or method in ES5. Consider using a standard function or method.
          }
       }
    }
    